--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Base URL for backend API (used by app module via BuildConfig.BASE_URL)
+BASE_URL=http://10.0.2.2:3000/api/
