--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HadirApp">
+            android:theme="@style/Theme.NoSplashIcon">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
