--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <!-- Needed for CameraX runtime permission requests -->
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!-- Declare camera hardware feature as not required for ChromeOS compatibility -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.any" android:required="false" />
+
     <application
         android:allowBackup="true"
         android:networkSecurityConfig="@xml/network_security_config"
