--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Base URL for backend API (used by app module via BuildConfig.BASE_URL)
-BASE_URL=http://10.0.2.2:3000/api/
+# Use 192.168.0.4 for real device, or 10.0.2.2 for emulator
+BASE_URL=https://api.giyuu.online/api/
