fix(home-ui): improve layout responsiveness and list sizing

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,5 @@ android.nonTransitiveRClass=true
 
 # Base URL for backend API (used by app module via BuildConfig.BASE_URL)
 # Use 192.168.0.4 for real device, or 10.0.2.2 for emulator
-BASE_URL=https://api.giyuu.online/api/
+# BASE_URL=https://api.giyuu.online/api/
+BASE_URL=http://10.0.2.2:3000/api/
